# lmax-clob

./: .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml
crates/clob-api/: Cargo.toml  Dockerfile
crates/clob-api/src/: follower.rs  health.rs  leader.rs  main.rs  metrics.rs  state.rs  tracing_setup.rs
crates/clob-api/src/handlers/: health.rs  markets.rs  mod.rs  orders.rs  ws.rs
crates/clob-api/src/ingest/: mod.rs  processor.rs  yellowstone.rs
crates/clob-api/src/kafka/: consumer.rs  fill_publisher.rs  mod.rs  producer.rs
crates/clob-api/src/middleware/: metrics.rs
crates/clob-api/src/persistence/: fills.rs  mod.rs  orders.rs  snapshot.rs
crates/clob-api/src/ws/: broadcast.rs
crates/clob-engine/: Cargo.toml  dhat-heap.json
crates/clob-engine/benches/: alloc_profile.rs  btreemap_vs_vec.rs  order_matching.rs  orderbook_ops.rs  serialization.rs
crates/clob-engine/src/: error.rs  events.rs  lib.rs  matching.rs  order.rs  orderbook.rs  snapshot.rs  types.rs
crates/yellowstone-mock/: Cargo.toml  Dockerfile
crates/yellowstone-mock/src/: config.rs  generator.rs  main.rs  server.rs
infra/grafana/dashboards/: clob-kafka.json  clob-matching-engine.json  clob-overview.json  clob-postgres.json
infra/grafana/provisioning/dashboards/: dashboards.yml
infra/grafana/provisioning/datasources/: datasources.yml
infra/postgres/: init.sql
infra/prometheus/: prometheus.yml
infra/redpanda/: create-topics.sh
k8s/: 00-rbac.yaml  01-configmap.yaml  02-service.yaml  03-statefulset.yaml
migrations/: 20260308000000_initial.sql  20260309000001_snapshots_kafka_offset.sql
